# shiplog

./: .gitignore  README.md  config.example.yaml  pyproject.toml
changelog/: __init__.py  categorizer.py  cli.py  config.py  formatter.py  github_client.py
shiplog/: __init__.py  categorizer.py  cli.py  config.py  formatter.py  github_client.py
